--- a/.gitignore
+++ b/.gitignore
@@ -32,15 +32,22 @@ dmypy.json
 *.tar
 overview.csv
 
-/src/processing_files/**/*
-! src/processing_files/pdbs/AF-O06917-F1-model_v4.pdb
-! src/processing_files/pdbs/AF-O06917-F1-model_v4.pdb
-! src/processing_files/pdbs/AF-O06918-F1-model_v4.pdb
-! src/processing_files/pdbs/AF-O53113-F1-model_v4.pdb
-! src/processing_files/pdbs/AF-P0CL56-F1-model_v4.pdb
-! src/processing_files/pdbs/AF-P0CW37-F1-model_v4.pdb
-! src/processing_files/pdbs/AF-P0CW38-F1-model_v4.pdb
-! src/processing_files/pdbs/AF-P54009-F1-model_v4.pdb
-! src/processing_files/pdbs/AF-P54009-F2-model_v4.pdb
-! src/processing_files/pdbs/AF-P54009-F3-model_v4.pdb
-! src/processing_files/pdbs/AF-P54009-F4-model_v4.pdb
+/src/processing_files/glbs/**/*
+/src/processing_files/plys/**/*
+/src/processing_files/MAPS/**/*
+/src/processing_files/pdbs/**/*
+
+
+!src/processing_files/pdbs/AF-O06917-F1-model_v4.pdb
+!src/processing_files/pdbs/AF-O06917-F1-model_v4.pdb
+!src/processing_files/pdbs/AF-O06918-F1-model_v4.pdb
+!src/processing_files/pdbs/AF-O53113-F1-model_v4.pdb
+!src/processing_files/pdbs/AF-P0CL56-F1-model_v4.pdb
+!src/processing_files/pdbs/AF-P0CW37-F1-model_v4.pdb
+!src/processing_files/pdbs/AF-P0CW38-F1-model_v4.pdb
+!src/processing_files/pdbs/AF-P54009-F1-model_v4.pdb
+!src/processing_files/pdbs/AF-P54009-F2-model_v4.pdb
+!src/processing_files/pdbs/AF-P54009-F3-model_v4.pdb
+!src/processing_files/pdbs/AF-P54009-F4-model_v4.pdb
+
+
